[package]
edition = "2018"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-ring"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.1.0"
description = "Ring wrappers for nosie-protocol."

[badges.maintenance]
status = "deprecated"

[dependencies]
ring = "0.14.6"

[dependencies.noise-protocol]
path = "../noise-protocol"
version = "0.1.0"
