[package]
edition = "2021"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-ring"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.2.0-rc.1"
description = "Ring wrappers for nosie-protocol."

[dependencies]
ring = "0.17"
zeroize = "1"

[dependencies.noise-protocol]
path = "../noise-protocol"
version = "0.2.0-rc.1"
