[package]
edition = "2018"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-rust-crypto"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.2.1-dev"
description = "Wrappers of dalek and RustCrypto crates for noise-protocol"

[features]
default = ["use-x25519", "use-chacha20poly1305", "use-aes-256-gcm", "use-blake2", "use-sha2"]
use-x25519 = ["x25519-dalek", "getrandom"]
use-chacha20poly1305 = ["chacha20poly1305", "aead"]
use-aes-256-gcm = ["aes-gcm", "aead"]
use-blake2 = ["blake2", "digest"]
use-sha2 = ["sha2", "digest"]

[dependencies]
x25519-dalek = { version = "0.6.0", optional = true }
aes-gcm = { version = "0.3.0", optional = true }
chacha20poly1305 = { version = "0.4.0", optional = true }
blake2 = { version = "0.8.1", optional = true }
sha2 = { version = "0.8.0", optional = true }
aead = { version = "0.2.0", optional = true }
getrandom = { version = "0.1.12", optional = true }
digest = { version = "0.8.1", optional = true }

[dependencies.noise-protocol]
path = "../noise-protocol"
version = "0.1.2-dev"

[dev-dependencies]
hex = "0.4"
