[package]
edition = "2018"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-rust-crypto"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.4.1"
description = "Wrappers of dalek and RustCrypto crates for noise-protocol"

[features]
default = ["use-x25519", "use-chacha20poly1305", "use-aes-256-gcm", "use-blake2", "use-sha2"]
x25519 = ["x25519-dalek", "getrandom"]
x25519-std = ["x25519", "x25519-dalek/std"]
x25519-u64_backend = ["x25519", "x25519-dalek/u64_backend"]
x25519-u32_backend = ["x25519", "x25519-dalek/u32_backend"]
use-x25519 = ["x25519", "x25519-dalek/default"]
use-chacha20poly1305 = ["chacha20poly1305"]
use-aes-256-gcm = ["aes-gcm"]
use-blake2 = ["blake2"]
use-sha2 = ["sha2"]

[dependencies]
x25519-dalek = { version = "1.1.0", optional = true, default-features = false }
aes-gcm = { version = "0.7.0", optional = true }
chacha20poly1305 = { version = "0.8.0", optional = true }
blake2 = { version = "0.9.0", optional = true }
sha2 = { version = "0.9.0", optional = true, default-features = false }
getrandom = { version = "0.2.0", optional = true }
zeroize = "1.1.0"

[dependencies.noise-protocol]
path = "../noise-protocol"
version = "0.1.2"
default-features = false

[dev-dependencies]
hex = "0.4"
