[package]
edition = "2018"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-sodiumoxide"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.1.1"
description = "Sodiumoxide wrappers for noise-protocol."

[dependencies]
libsodium-sys = "0.2"
noise-protocol = { path = "../noise-protocol", version = "0.1.2-dev" }
sodiumoxide = "0.2"
