[package]
authors = ["trevp", "Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-protocol"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.0.5"
description = "Noise Protocol Framework implementation."
keywords = ["noise"]
categories = ["cryptography"]
documentation = "https://docs.rs/noise-protocol/0.0.5"

[dependencies]
arrayvec = { version = "0.4", default-features = false }

[features]
default = ["use_std"]
use_std = []
