[package]
authors = ["sopium <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-ring"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.0.3"
description = "Ring wrappers for nosie-protocol."
documentation = "https://docs.rs/noise-ring/0.0.3"

[dependencies]
byteorder = "1.0.0"
ring = "0.7.1"

[dependencies.noise-protocol]
path = "../noise"
version = "0.0.3"
