[package]
authors = ["sopium <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-rust-crypto"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.0.3"
description = "Rust-crypto wrappers for noise-protocol."
documentation = "https://docs.rs/noise-rust-crypto/0.0.3"

[dependencies]
byteorder = "1.0.0"
rust-crypto = "0.2.36"
rand = "0.3"

[dependencies.noise-protocol]
path = "../noise"
version = "0.0.3"

[dev-dependencies]
rustc-serialize = "0.3"
