[package]
edition = "2018"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-rust-crypto"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.1.0"
description = "Rust-crypto wrappers for noise-protocol."

[dependencies]
rust-crypto = "0.2.36"
rand = "0.7"

[dependencies.noise-protocol]
path = "../noise"
version = "0.1.1-alpha.0"

[dev-dependencies]
hex = "0.3"
