[package]
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-sodiumoxide"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.0.5"
description = "Sodiumoxide wrappers for noise-protocol."
documentation = "https://docs.rs/noise-sodiumoxide/0.0.5"

[dependencies]
byteorder = "1.0.0"
libsodium-sys = "0.0.16"
noise-protocol = { path = "../noise", version = "0.0.5" }
sodiumoxide = "0.0.16"
