[package]
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-sodiumoxide"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.0.6"
description = "Sodiumoxide wrappers for noise-protocol."
documentation = "https://docs.rs/noise-sodiumoxide/0.0.6"

[dependencies]
byteorder = "1.0.0"
libsodium-sys = "0.1"
noise-protocol = { path = "../noise", version = "0.0.5" }
sodiumoxide = "0.1"
