[package]
edition = "2018"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
license = "Unlicense"
name = "noise-sodiumoxide"
readme = "README.md"
repository = "https://github.com/sopium/noise-rust"
version = "0.1.1"
description = "Sodiumoxide wrappers for noise-protocol."

[dependencies]
libsodium-sys = "0.2"
noise-protocol = { path = "../noise", version = "0.1.1-alpha.0" }
sodiumoxide = "0.2"
