[package]
name = "noise-vectors"
version = "0.0.3"
authors = ["sopium <sopium@mysterious.site>"]
build = "build.rs"

[dev-dependencies]
hex = "0.3.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
noise-protocol = { path = "../noise", features = ["use_std"] }
noise-ring = { path = "../ring" }
noise-rust-crypto = { path = "../rust-crypto" }
noise-sodiumoxide = { path = "../sodiumoxide" }
