[package]
edition = "2018"
name = "noise-vectors"
version = "0.1.0"
authors = ["Guanhao Yin <sopium@mysterious.site>"]
build = "build.rs"

[dev-dependencies]
hex = "0.4.0"
lazy_static = "1.1"
noise-protocol = { path = "../noise", features = ["use_std"] }
noise-rust-crypto = { path = "../rust-crypto" }
noise-sodiumoxide = { path = "../sodiumoxide" }
rayon = "1.0"
regex = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
